--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,14 @@
 .App-link {
   color: #61dafb;
 }
-
+.card-style {
+  max-width: 18rem;
+}
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
